# lab07

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: cicd.yml
cmake/Hunter/: config.cmake
demo/: main.cpp
tests/: solver_test.cpp
